# cloudflare-tunnel-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.cargo/: config.toml
connector/: Cargo.toml  build.rs
connector/src/: auth.rs  config.rs  error.rs  events.rs  main.rs  pair_bootstrap.rs  server.rs  state.rs  watchers.rs
connector/src/routes/: cloudflare.rs  events.rs  files.rs  folder.rs  fs.rs  http.rs  mod.rs  pages.rs  projects.rs  settings.rs  setup.rs  shell.rs  status.rs  system.rs  tail.rs  tunnels.rs
core/: Cargo.toml
core/src/: error.rs  fs_browse.rs  fs_ops.rs  http_tester.rs  lib.rs  resolve.rs  secrets.rs  shell.rs  state.rs
core/src/cloudflared/: api.rs  bootstrap.rs  cli.rs  config_gen.rs  d1.rs  dns.rs  mod.rs  pages.rs  r2.rs  workers.rs
core/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
core/src/health/: mod.rs
core/src/local_server/: mod.rs  setup_guide.rs  static_server.rs  supervisor.rs
core/src/metrics/: scraper.rs
core/src/projects/: create.rs  files.rs  import.rs  inspect.rs  mod.rs  redeploy.rs  stop.rs  store.rs
core/src/scaffold/: mod.rs
core/src/scaffold/templates/api-d1/: README.md.tmpl  package.json.tmpl  schema.sql.tmpl  src.index.js.tmpl  wrangler.toml.tmpl
core/src/scaffold/templates/auto-update/: README.md.tmpl  package.json.tmpl  src.index.js.tmpl  wrangler.toml.tmpl
core/src/scaffold/templates/empty-worker/: README.md.tmpl  package.json.tmpl  src.index.js.tmpl  wrangler.toml.tmpl
core/src/scaffold/templates/form-to-d1/: README.md.tmpl  schema.sql.tmpl  src.index.js.tmpl
core/src/scaffold/templates/image-upload-r2/: README.md.tmpl  package.json.tmpl  src.index.js.tmpl  wrangler.toml.tmpl
core/src/scaffold/templates/login-server/: README.md.tmpl  package.json.tmpl  schema.sql.tmpl  src.index.js.tmpl  wrangler.toml.tmpl
core/src/scaffold/templates/static-pages/: README.md.tmpl  index.html.tmpl  package.json.tmpl  style.css.tmpl
core/src/scaffold/templates/stripe-webhook/: README.md.tmpl  src.index.js.tmpl  wrangler.toml.tmpl
core/src/setup/: install.rs  mod.rs
core/src/supervisor/: mod.rs  proc.rs
core/src/wrangler/: mod.rs
docs/testing/: manual-smoke.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  mirror.rs  secrets.rs  state.rs
src-tauri/src/cloudflared/: api.rs  cert.rs  cli.rs  config_gen.rs  mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/health/: check.rs
src-tauri/src/local_server/: detect.rs  mod.rs  supervisor.rs
src-tauri/src/metrics/: mod.rs
src-tauri/src/supervisor/: log_buffer.rs  mod.rs
src/components/: AddPageDialog.tsx  ApiTester.tsx  ApiTokenSection.tsx  ConfirmDialog.tsx  ConnectionSection.tsx  DeployTerminal.tsx  GlobalKeySection.tsx  ListState.tsx  LocalLogsViewer.tsx  PageRow.tsx  PageShell.tsx  RemoteFolderPicker.tsx  SetupBanner.tsx  SetupSection.tsx  Sidebar.tsx  StatsStrip.tsx  StatusDot.tsx  TailViewer.tsx  TitleBar.tsx  TokenGate.tsx
src/hooks/: useLiveStatus.ts
src/lib/: connection.ts  deployTerminal.ts  events.ts  ipc.ts  sse.ts  store.ts  types.ts
src/pages/: CfPagesView.tsx  D1View.tsx  DNSView.tsx  DashboardView.tsx  FilesView.tsx  HealthView.tsx  LogsView.tsx  PagesView.tsx  ProjectEditor.tsx  ProjectsView.tsx  R2View.tsx  SettingsView.tsx  TunnelsView.tsx  WorkersView.tsx
