[package]
name = "cf_tunnel_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cf_tunnel_core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.41", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
which = "7.0"
dirs = "5.0"
once_cell = "1.20"
parking_lot = "0.12"
rand = "0.8"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native", "sync-secret-service"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tempfile = "3.13"
mockito = "1.6"
