[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.41", features = ["full"] }
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
which = "7.0"
dirs = "5.0"
once_cell = "1.20"
parking_lot = "0.12"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native", "sync-secret-service"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tempfile = "3.13"
mockito = "1.6"
